--- a/src/main/resources/static/Pages/Disciplina.html
+++ b/src/main/resources/static/Pages/Disciplina.html
@@ -22,7 +22,7 @@
                     <li class="nav-item"><a class="nav-link" href="Professor.html">Professores</a></li>
                     <li class="nav-item"><a class="nav-link" href="Disciplina.html">Disciplinas</a></li>
                     <li class="nav-item"><a class="nav-link" href="turmas.html">Turmas</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="Vizualizar.html">Classroom</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Vizualizar.html">Consultar Turmas</a></li>
                 </ul>
             </div>
         </div>
