--- a/src/main/resources/static/Pages/index.html
+++ b/src/main/resources/static/Pages/index.html
@@ -16,6 +16,7 @@
             background-color: #d9e7fa;
             color: #37545d;
         }
+    
         #main-content h1 {
             font-size: 2.5rem;
             margin-bottom: 20px;
@@ -62,7 +63,7 @@
                     <li class="nav-item"><a class="nav-link" href="../Pages/Professor.html">Professores</a></li>
                     <li class="nav-item"><a class="nav-link" href="../Pages/Disciplina.html">Disciplinas</a></li>
                     <li class="nav-item"><a class="nav-link" href="../Pages/turmas.html">Turmas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../Pages/Vizualizar.html">Classroom</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../Pages/Vizualizar.html">Consultar Turmas</a></li>
                 </ul>
             </div>
         </div>
