--- a/src/main/resources/static/Pages/login.html
+++ b/src/main/resources/static/Pages/login.html
@@ -71,7 +71,7 @@
                 window.location.href = '../Pages/index.html'; // Redireciona para o painel do administrador
             } else {
                 alert('Bem-vindo Usuário! Acesso de consulta liberado.');
-                window.location.href = '../Pages/vizualizar.html'; // Redireciona para o painel de consulta
+                window.location.href = '../Pages/vizualizarUsuario.html'; // Redireciona para o painel de consulta
             }
         } else {
             alert('Usuário ou senha inválidos.');
